Fixed drectory issues Removed unnecessary files Added few dependencies